Fixed graphs out of boundary problems

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+* , *::before, *::after {
+    box-sizing: border-box;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -63,6 +67,11 @@ body {
     padding: 10px;
     min-height: 350px;
     box-shadow: 0 0 6px rgba(0,0,0,0.1);
+    overflow: hidden;
+}
+
+#map svg, #bar svg {
+    display: block;
 }
 
 .tooltip {
